--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles/styles.css">
     <title>Home</title>
 </head>
 <body>
-    Testing
+    
+
+    <div class="parent">
+
+    </div>
+
+
 </body>
 </html>
