--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     
 
-    <div class="parent">
-
-    </div>
+    <section class="layout">
+        <div class="sidebar">1</div>
+        <div class="body1">2</div>
+        <div class="body2">3</div>
+      </section>
 
 
 </body>
